fixed slider on Iphone X

--- a/client/src/style/_media-phone.scss
+++ b/client/src/style/_media-phone.scss
@@ -174,6 +174,17 @@
       max-height: 350px;
     }
   }
+  .circle-container {
+    width: 100%;
+    text-align: center;
+    .circle-empty {
+      font-size: 13px;
+      padding: 0 4px;
+      &:hover {
+        outline: none;
+      }
+    }
+  }
 }
 @media only screen and (max-width: 650px) {
   .video {
@@ -246,16 +257,7 @@
       outline: none;
     }
   }
-  .circle-container {
-    width: 100%;
-    text-align: center;
-    .circle-empty {
-      font-size: 13px;
-      &:hover {
-        outline: none;
-      }
-    }
-  }
+
   .video {
     iframe {
       width: 100%;
@@ -311,5 +313,16 @@
   .container {
     padding-left: env(safe-area-inset-left);
     padding-right: env(safe-area-inset-right);
+  }
+  .circle-container {
+    width: 100%;
+    text-align: center;
+    .circle-empty {
+      font-size: 13px;
+      padding: 0 5px;
+      &:hover {
+        outline: none;
+      }
+    }
   }
 }
